Curves not displaying properly with "In Front" ticked in EDIT mode going through meshes. #61326

Closed
opened 2019-02-08 15:03:17 +01:00 by Eneko Castresana Vara · 6 comments

System Information
Operating system: Ubuntu 18.04.1 LTS
Graphics card: GeForce GTX 950M

Blender Version
Broken: 2.80 (sub 43), branch: master, commit date: 2019-02-02 04:23, hash: 141c6073ca, type: Release
build date: 2019-02-02, 11:01:21
Worked: 2.79 (sub 0)

Short description of error
(First, apologies if I'm mistaken by reporting this, because it's really hard to find if this was already reported by searching "in front".)

Curves (at least) do not show (in solid, lookdev and rendered modes) when going through meshes in EDIT mode with "In Front" ticked. The intersecting part is occluded by the mesh. They do show properly in object mode though.

Exact steps for others to reproduce the error
Add a curve and scale it to go beyond the limits of the default cube. Tick "In Front" in curve object properties under display section (old x-ray, I presume). The curve shows in front of the cube despite going through it, as expected. Go into edit mode. The curve is partially occluded by the cube now. This didn't occur in pre-2.8 .

**System Information** Operating system: Ubuntu 18.04.1 LTS Graphics card: GeForce GTX 950M **Blender Version** Broken: 2.80 (sub 43), branch: master, commit date: 2019-02-02 04:23, hash: 141c6073ca39, type: Release build date: 2019-02-02, 11:01:21 Worked: 2.79 (sub 0) **Short description of error** (First, apologies if I'm mistaken by reporting this, because it's really hard to find if this was already reported by searching "in front".) Curves (at least) do not show (in solid, lookdev and rendered modes) when going through meshes in EDIT mode with "In Front" ticked. The intersecting part is occluded by the mesh. They do show properly in object mode though. **Exact steps for others to reproduce the error** Add a curve and scale it to go beyond the limits of the default cube. Tick "In Front" in curve object properties under display section (old x-ray, I presume). The curve shows in front of the cube despite going through it, as expected. Go into edit mode. The curve is partially occluded by the cube now. This didn't occur in pre-2.8 .

Added subscriber: @ecv

Added subscriber: @ecv
Clément Foucault was assigned by Sebastian Parborg 2019-02-08 15:09:13 +01:00

I have also found this to be the case with meshes, when one of them is set to "in front" and both are selected and going into edit mode, no matter which one is the active object. But I do not know if this is to be expected anyways in this not-so-common case.

I have just confirmed this behaviour didn't occur in 2.79. But I understand one couldn't edit both meshes at a time before 2.80. So I'm unsure if this is a bug as well. Please do tell me if I need to file a new bug in case. Thanks.

I have also found this to be the case with meshes, when one of them is set to "in front" and both are selected and going into edit mode, no matter which one is the active object. But I do not know if this is to be expected anyways in this not-so-common case. I have just confirmed this behaviour didn't occur in 2.79. But I understand one couldn't edit both meshes at a time before 2.80. So I'm unsure if this is a bug as well. Please do tell me if I need to file a new bug in case. Thanks.

It might be relevant: Appending a mesh and curve from a 2.80 .blend into 2.79 renders the curve occluded in both object and edit modes.

It might be relevant: Appending a mesh and curve from a 2.80 .blend into 2.79 renders the curve occluded in both object and edit modes.

@ecv Edit Mesh mode cage will not support in-front option in multi-object editing.

But the case of the curve is relevant!

@ecv Edit Mesh mode cage will not support in-front option in multi-object editing. But the case of the curve is relevant!

This issue was referenced by bff472d2ff

This issue was referenced by bff472d2ff203b1a95ba87971569c2f5925046a9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61326
No description provided.